add example file

--- a/examples_xt1111.ipynb
+++ b/examples_xt1111.ipynb
@@ -2,30 +2,45 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import importlib\n",
+    "importlib.reload(busworks_xt1111)\n",
     "import busworks_xt1111"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
     "bus = busworks_xt1111.BusWorksXT1111()\n",
     "bus.start()\n",
-    "bus.set_gains_and_filters(24, [0, 0, 1])\n"
+    "# To get a gain of 12dB with filter 2 and 3 on\n",
+    "bus.set_gains_and_filters(12, [0, 1, 1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# To get a gain of 42dB with filters off as default ([0, 0, 0])\n",
+    "bus.stop()\n",
+    "bus.set_gains_and_filters(42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# shut it down in the end\n",
     "bus.stop()"
    ]
   }
