--- a/examples_xt1111.ipynb
+++ b/examples_xt1111.ipynb
@@ -8,6 +8,7 @@
    "source": [
     "import importlib\n",
     "importlib.reload(busworks_xt1111)\n",
+    "# busworks_xt1111.py in the same directory\n",
     "import busworks_xt1111"
    ]
   },
@@ -17,7 +18,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# initialize default IP-add of the device at 192.168.1.100 using port 502\n",
     "bus = busworks_xt1111.BusWorksXT1111()\n",
+    "# connect with xt1111 using modbus tcp client\n",
     "bus.start()\n",
     "# To get a gain of 12dB with filter 2 and 3 on\n",
     "bus.set_gains_and_filters(12, [0, 1, 1])"
