--- a/examples_xt1111.ipynb
+++ b/examples_xt1111.ipynb
@@ -2,19 +2,30 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<module 'busworks_xt1111' from '/home/controls/pythoncode/pitestcode/busworks_xt1111.py'>"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "import busworks_xt1111\n",
     "import importlib\n",
     "importlib.reload(busworks_xt1111)\n",
-    "# busworks_xt1111.py in the same directory\n",
-    "import busworks_xt1111"
+    "# busworks_xt1111.py in the same directory"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
