--- a/examples_xt1111.ipynb
+++ b/examples_xt1111.ipynb
@@ -2,20 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<module 'busworks_xt1111' from '/home/controls/pythoncode/pitestcode/busworks_xt1111.py'>"
-      ]
-     },
-     "execution_count": 113,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import busworks_xt1111\n",
     "import importlib\n",
@@ -25,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,98 +26,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "start at: 1638410662.78755\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from time import time\n",
+    "from time import time, ctime\n",
     "start_time = time()\n",
-    "print('start at: {}'.format(start_time))"
+    "print('start at: {}'.format(ctime(start_time)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[4, 14, 0, 0, 25115]\n",
-      "Row 1 (i/o 0  - 3 ): 0 | 0 | 1 | 0\n",
-      "Row 2 (i/o 4  - 7 ): 0 | 1 | 1 | 1\n",
-      "Row 3 (i/o 8  - 11): 0 | 0 | 0 | 0\n",
-      "Row 4 (i/o 12 - 15): 0 | 0 | 0 | 0\n",
-      "time elaspsed: 121.83425855636597\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# To get a gain of 12dB with filter 2 and 3 on\n",
-    "bus.set_gains_and_filters(6, [0, 1, 1])\n",
-    "print(bus.read_registers(0, 5))\n",
+    "# To get a gain of 9dB with filter 2 and 3 on\n",
+    "bus.set_gains_and_filters(9, '011')\n",
+    "print(bus.read_registers())\n",
     "bus.print_register_states()\n",
     "print('time elaspsed: {}'.format(time()-start_time))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Row 1 (i/o 0  - 3 ): 0 | 0 | 1 | 0\n",
-      "Row 2 (i/o 4  - 7 ): 0 | 1 | 1 | 1\n",
-      "Row 3 (i/o 8  - 11): 0 | 0 | 0 | 0\n",
-      "Row 4 (i/o 12 - 15): 0 | 0 | 0 | 0\n",
-      "\n",
-      "Row 1 (i/o 0  - 3 ): 0 | 0 | 1 | 0\n",
-      "Row 2 (i/o 4  - 7 ): 0 | 1 | 1 | 1\n",
-      "Row 3 (i/o 8  - 11): 0 | 0 | 1 | 0\n",
-      "Row 4 (i/o 12 - 15): 0 | 0 | 0 | 0\n",
-      "\n",
-      "Row 1 (i/o 0  - 3 ): 0 | 0 | 1 | 0\n",
-      "Row 2 (i/o 4  - 7 ): 0 | 1 | 1 | 1\n",
-      "Row 3 (i/o 8  - 11): 0 | 0 | 1 | 0\n",
-      "Row 4 (i/o 12 - 15): 0 | 0 | 0 | 0\n",
-      "\n",
-      "Row 1 (i/o 0  - 3 ): 0 | 0 | 1 | 0\n",
-      "Row 2 (i/o 4  - 7 ): 0 | 1 | 1 | 1\n",
-      "Row 3 (i/o 8  - 11): 0 | 0 | 1 | 0\n",
-      "Row 4 (i/o 12 - 15): 0 | 0 | 0 | 0\n",
-      "\n",
-      "Row 1 (i/o 0  - 3 ): 0 | 0 | 1 | 0\n",
-      "Row 2 (i/o 4  - 7 ): 0 | 1 | 1 | 1\n",
-      "Row 3 (i/o 8  - 11): 0 | 0 | 0 | 0\n",
-      "Row 4 (i/o 12 - 15): 0 | 0 | 0 | 0\n",
-      "\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-57-72f02c66148a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0mbus\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mprint_register_states\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m     \u001b[0msleep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# test if readbacks change based on different input voltages. e.g. by connecting the wires from i/o 00 to i/o 08, so when 00 changes from 0 to 1, 08 should also change from 0 to 1, and we should be able to read this change in real time\n",
     "from time import sleep\n",
     "while True:\n",
     "    bus.print_register_states()\n",
@@ -138,44 +64,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0, 0, 0, 0]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(bus.XT1111.read_input_registers(0,4).registers)"
+    "# To get a gain of 39dB with filters off as default ([0, 0, 0])\n",
+    "# bus.stop()\n",
+    "# sleep(0.1)\n",
+    "bus.set_gains_and_filters(39)\n",
+    "# sleep(0.1)\n",
+    "print(bus.read_registers())\n",
+    "bus.bus.print_register_states()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[7, 8, 0, 0]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# To get a gain of 42dB with filters off as default ([0, 0, 0])\n",
-    "bus.stop()\n",
-    "bus.set_gains_and_filters(42)\n",
-    "print(bus.read_registers())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
