clear outputs of cells

--- a/examples_xt1111.ipynb
+++ b/examples_xt1111.ipynb
@@ -74,7 +74,7 @@
     "bus.set_gains_and_filters(39)\n",
     "# sleep(0.1)\n",
     "print(bus.read_registers())\n",
-    "bus.bus.print_register_states()"
+    "bus.print_register_states()"
    ]
   },
   {
